# impossible-day-s2-2024

./: .gitignore  pair.html
matcher-bot/: pyproject.toml
matcher-bot/matcher_bot/: helloworld.py
matcher-bot/tests/: test_hellorc.py  test_helloworld.py  test_matcher.py
matcher-bot/zulip_bots/: custom_exceptions.py  lib.py  request_test_lib.py  simple_lib.py  test_file_utils.py  test_lib.py
matcher-bot/zulip_bots/bots/hellorc/: hellorc.py
matcher-bot/zulip_bots/bots/matcher/: matcher.py
